education-pro: Ensure that sticky nav has high z-index.
See #2701.

--- a/wp-content/mu-plugins/theme-fixes/education-pro-new/education-pro.css
+++ b/wp-content/mu-plugins/theme-fixes/education-pro-new/education-pro.css
@@ -393,6 +393,7 @@ a.breadcrumb-link:hover {
 .nav-primary {
 	position: sticky;
 	top: 0px;
+	z-index: 99;
 }
 
 .nav-primary .genesis-nav-menu {
